2002-07-26  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/create_object.c: 
	* app/modify_tool.c: 
	* app/cursor.h: 
	* app/cursor.c: 
	More cursor change.

2002-07-25  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/preferences.c: 
	* lib/paper.c: 
	* app/diapagelayout.c: 
	New prefs selector kind PREF_CHOICE chooses between a list of
	strings.  Used for picking default paper.
	
	* app/preferences.c (prefs_data): 
	* lib/paper.c (get_paper_info): Added prefs setting for
	is_portrait.

	* lib/render.c (draw_polyline_with_arrows): Handles degenerate
	line segments at the ends (bug #86603).

2002-07-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/standard/zigzagline.c (zigzagline_copy): Fix for bug
	#60324: Now calls update_data after copy.

	* app/interface.c (fill_sheet_wbox): Better fix for bug #88601:
	Now doesn't steal selection from non-object tools.

2002-07-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/commands.c (help_manual_callback): Uses BROWSER environment
	variable when available.

2002-07-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/interface.c (fill_sheet_wbox): Fix for bug #88601: Select an
	object from the new sheet when changing.

	* app/app_procs.c (app_init): Uses more standard size icon, from
	patch #56433.  Keeping old icon as dia_gnome_icon_large.png.

2002-07-22  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/UML/implements.c (implements_update_data): 
	* objects/UML/realizes.c (realizes_update_data): 
	* objects/UML/dependency.c (dependency_update_data): 
	Test for null strings before calling on ascent.

	* objects/UML/realizes.c (realizes_draw): 
	* objects/UML/message.c (message_draw): 
	* objects/UML/generalization.c (generalization_draw): 
	* objects/UML/dependency.c (dependency_draw) 
	* objects/UML/constraint.c (constraint_draw): 
	* objects/GRAFCET/condition.c (condition_draw): 
	* objects/UML/association.c (association_draw): 
	* objects/FS/flow-ortho.c (orthflow_draw): 